--- a/generators/meta/templates/handler-osgi.xml
+++ b/generators/meta/templates/handler-osgi.xml
@@ -23,15 +23,15 @@
 		role: "consumer" (outgoing calls to downstream service) or "provider" (incoming calls to virtual service)
 	-->
 
-	<osgi:service ref="<%= props.namespace %>.handler.factory" interface="com.soa.message.handler.HandlerFactory">
+	<osgi:service ref="<%= props.handlerPackage %>.factory" interface="com.soa.message.handler.HandlerFactory">
 		<osgi:service-properties>
-			<entry key="name" value="<%= props.namespace %>.handler.factory"/>
+			<entry key="name" value="<%= props.handlerPackage %>.factory"/>
 			<entry key="scope" value="abstract"/>
 			<entry key="role" value="provider"/>
 			<!--entry key="binding" value="http"/-->
 			<!-- entry key="after" value="*"/-->   
 		</osgi:service-properties>
-		<bean class="<%= props.packageHandler %>.<%= props.component %>MessageHandlerFactory"/>
+		<bean class="<%= props.handlerPackage %>.<%= props.component %>MessageHandlerFactory"/>
 	</osgi:service>	
 	
 </beans>
