Dynamic package for model classes

--- a/generators/meta/templates/wsp-handler-osgi.xml
+++ b/generators/meta/templates/wsp-handler-osgi.xml
@@ -69,7 +69,7 @@
 		</property>
 		<property name="jaxbPaths">
 			<list>
-				<value>com.akana.demo.policy.bean</value>
+				<value><%= props.modelPackage %></value>
 			</list>
 		</property>
 	</bean>
