Export Sample Policy. Fix Manifest file OSGi exports

--- a/generators/model/templates/sample.xml
+++ b/generators/model/templates/sample.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<Settings xmlns:jxb="http://java.sun.com/xml/ns/jaxb"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
- xsi:noNamespaceSchemaLocation="list-key-value.xsd">
-    <Setting key="prop.1">Property Value</Setting>
-    <Setting key="prop.2">Hello World</Setting>
-</Settings>
+<wsp:Policy xmlns:wsp="http://schemas.xmlsoap.org/ws/2004/09/policy" visibility="public">
+	<Settings xmlns:soawesome="urn:com.akana.awesome.policy">
+	    <Setting key="prop.1">Property Value</Setting>
+	    <Setting key="prop.2">Hello World</Setting>
+	</Settings>
+</wsp:Policy>	
